@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto
skinparam classAttributeIconSize 0
'left to right direction



class RegisterSkillUI {
    - String skillName

    + RegisterSkillUI()
    - getController()
    + run()
    - submitData()
    - requestData()
    - requestSkillName()
    - validateSkill(skillName)
}

class RegisterSkillController {
    + RegisterSkillController()
    + RegisterSkillController(skillRepository)
    - getSkillRepository()
    + registerSkill(skillName)
}

class Repositories {
    - Repositories()
    + getInstance() : Repositories
    + getSkillRepository()
}

class SkillRepository {
    - List<Skill> skillList

    + SkillRepository()
    - add(skill)
    - validateSkill(skill)
    + registerSkill(skillName)
}

class Skill {
    - String skillName

    + Skill(skillName)
    + getSkillName()
    + setSkillName(skillName)
    - validateSkill(skillName)
    + clone()
}

Repositories -> Repositories : instance
Repositories --> "1" SkillRepository
RegisterSkillController ..> SkillRepository : skillRepository
SkillRepository "1" --> "*" Skill : skill
RegisterSkillController ..> Repositories : repositories
RegisterSkillUI ..> RegisterSkillController

@enduml